external-crates/move/crates/move-compiler/tests/move_2024/parser/cast_invalid.exp
error[E01015]: ambiguous 'as'
  ┌─ tests/move_2024/parser/cast_invalid.move:4:9
  │
4 │         if (cond) x else { x } as u32;
  │         ^^^^^^^^^^^^^^^^^^^^^^ Potentially ambiguous 'as'. Add parentheses to disambiguate

error[E01015]: ambiguous 'as'
  ┌─ tests/move_2024/parser/cast_invalid.move:5:9
  │
5 │         while (cond) {} as u32;
  │         ^^^^^^^^^^^^^^^ Potentially ambiguous 'as'. Add parentheses to disambiguate

error[E04003]: built-in operation not supported
  ┌─ tests/move_2024/parser/cast_invalid.move:5:9
  │
5 │         while (cond) {} as u32;
  │         ^^^^^^^^^^^^^^^
  │         │
  │         Invalid argument to 'as'
  │         Found: '()'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'

error[E01015]: ambiguous 'as'
  ┌─ tests/move_2024/parser/cast_invalid.move:6:9
  │
6 │         loop {} as u32;
  │         ^^^^^^^ Potentially ambiguous 'as'. Add parentheses to disambiguate

error[E01015]: ambiguous 'as'
  ┌─ tests/move_2024/parser/cast_invalid.move:7:9
  │
7 │         'l: { 0 } as u32;
  │         ^^^^^^^^^ Potentially ambiguous 'as'. Add parentheses to disambiguate

error[E04031]: invalid usage of lambda
  ┌─ tests/move_2024/parser/cast_invalid.move:8:9
  │
8 │         || { 0 } as u32;
  │         ^^^^^^^^^^^^^^^ Lambdas can only be used directly as arguments to 'macro' functions

error[E01015]: ambiguous 'as'
  ┌─ tests/move_2024/parser/cast_invalid.move:9:9
  │
9 │         return as u32;
  │         ^^^^^^ Potentially ambiguous 'as'. Add parentheses to disambiguate

error[E01015]: ambiguous 'as'
   ┌─ tests/move_2024/parser/cast_invalid.move:11:13
   │
11 │             break as u32;
   │             ^^^^^ Potentially ambiguous 'as'. Add parentheses to disambiguate

error[E01015]: ambiguous 'as'
   ┌─ tests/move_2024/parser/cast_invalid.move:12:13
   │
12 │             continue as u32;
   │             ^^^^^^^^ Potentially ambiguous 'as'. Add parentheses to disambiguate

error[E01015]: ambiguous 'as'
   ┌─ tests/move_2024/parser/cast_invalid.move:14:9
   │
14 │         0 as u32 as u32;
   │         ^^^^^^^^ Potentially ambiguous 'as'. Add parentheses to disambiguate

error[E01015]: ambiguous 'as'
   ┌─ tests/move_2024/parser/cast_invalid.move:18:9
   │
18 │         x + y as u32;
   │         ^^^^^ Potentially ambiguous 'as'. Add parentheses to disambiguate

error[E01015]: ambiguous 'as'
   ┌─ tests/move_2024/parser/cast_invalid.move:19:9
   │
19 │         x - y as u32;
   │         ^^^^^ Potentially ambiguous 'as'. Add parentheses to disambiguate

error[E01015]: ambiguous 'as'
   ┌─ tests/move_2024/parser/cast_invalid.move:20:9
   │
20 │         x * y as u32;
   │         ^^^^^ Potentially ambiguous 'as'. Add parentheses to disambiguate

error[E01015]: ambiguous 'as'
   ┌─ tests/move_2024/parser/cast_invalid.move:21:9
   │
21 │         x / y as u32;
   │         ^^^^^ Potentially ambiguous 'as'. Add parentheses to disambiguate

error[E01015]: ambiguous 'as'
   ┌─ tests/move_2024/parser/cast_invalid.move:22:9
   │
22 │         x % y as u32;
   │         ^^^^^ Potentially ambiguous 'as'. Add parentheses to disambiguate

error[E01015]: ambiguous 'as'
   ┌─ tests/move_2024/parser/cast_invalid.move:23:9
   │
23 │         x & y as u32;
   │         ^^^^^ Potentially ambiguous 'as'. Add parentheses to disambiguate

error[E01015]: ambiguous 'as'
   ┌─ tests/move_2024/parser/cast_invalid.move:24:9
   │
24 │         x | y as u32;
   │         ^^^^^ Potentially ambiguous 'as'. Add parentheses to disambiguate

error[E01015]: ambiguous 'as'
   ┌─ tests/move_2024/parser/cast_invalid.move:25:9
   │
25 │         x ^ y as u32;
   │         ^^^^^ Potentially ambiguous 'as'. Add parentheses to disambiguate

error[E01015]: ambiguous 'as'
   ┌─ tests/move_2024/parser/cast_invalid.move:26:9
   │
26 │         x << y as u32;
   │         ^^^^^^ Potentially ambiguous 'as'. Add parentheses to disambiguate

error[E01015]: ambiguous 'as'
   ┌─ tests/move_2024/parser/cast_invalid.move:27:9
   │
27 │         x >> y as u32;
   │         ^^^^^^ Potentially ambiguous 'as'. Add parentheses to disambiguate

error[E01015]: ambiguous 'as'
   ┌─ tests/move_2024/parser/cast_invalid.move:28:9
   │
28 │         !x as u32;
   │         ^^ Potentially ambiguous 'as'. Add parentheses to disambiguate

error[E04003]: built-in operation not supported
   ┌─ tests/move_2024/parser/cast_invalid.move:28:9
   │
28 │         !x as u32;
   │         ^^
   │         │
   │         Invalid argument to 'as'
   │         Found: 'bool'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'

error[E04007]: incompatible types
   ┌─ tests/move_2024/parser/cast_invalid.move:28:10
   │
17 │     fun ops(x: u8, y: u8) {
   │                -- Given: 'u8'
   ·
28 │         !x as u32;
   │          ^
   │          │
   │          Invalid argument to '!'
   │          Expected: 'bool'

